[gd_scene load_steps=17 format=3 uid="uid://doajni6v2crx0"]

[ext_resource type="Material" uid="uid://xtwaepa7vuh" path="res://Materials/UI/menu_blur_background.tres" id="1_6j2ee"]
[ext_resource type="LabelSettings" uid="uid://dyn75pi86acbl" path="res://Styles/LabelSettings/normal_label_bold.tres" id="1_hun4q"]
[ext_resource type="Material" uid="uid://6srimgbwoygb" path="res://Materials/UI/title_box_blur_background.tres" id="2_h2u68"]
[ext_resource type="StyleBox" uid="uid://d0ulp3nmaac3g" path="res://Styles/StyleBox/blur_box_background.tres" id="2_pahqp"]
[ext_resource type="Script" uid="uid://0xg5d47ur78n" path="res://Scripts/Controls/Basic/Panel/info_box.gd" id="3_cbv6j"]
[ext_resource type="StyleBox" uid="uid://d2paldjrl6nkr" path="res://Styles/StyleBox/box_header.tres" id="3_f5t0m"]
[ext_resource type="PackedScene" uid="uid://cclh2sc42q7oe" path="res://Scenes/Objects/UI/Basic/Panel/info_box_scroll_container.tscn" id="7_dbawo"]
[ext_resource type="Texture2D" uid="uid://cuy2hateq71i2" path="res://Assets/Textures/Icon/Basic/x_button.svg" id="7_hlvdv"]
[ext_resource type="Texture2D" uid="uid://bqjcguviu4eeu" path="res://Assets/Textures/Icon/Basic/x_button_pressed.svg" id="8_ocjo1"]
[ext_resource type="Texture2D" uid="uid://cyma3cf5md0ee" path="res://Assets/Textures/Icon/Basic/x_button_disabled.svg" id="9_4dgnn"]
[ext_resource type="StyleBox" uid="uid://dvqb85cbhfxpt" path="res://Styles/StyleBox/info_box_accent_color_panel.tres" id="11_ss1hi"]
[ext_resource type="AudioStream" uid="uid://b0lijxw8e6nn1" path="res://Assets/Audio/SFX/UI/cancel.wav" id="12_g1o5c"]

[sub_resource type="Animation" id="Animation_nyyra"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/PanelContainer:material:shader_parameter/alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_xrtbe"]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.233333, -1.5, -300, -0.166667, 1, 0.2, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/alpha")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/PanelContainer:material:shader_parameter/alpha")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_skxv3"]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-300, -0.15, 0, 0.15, 0, 0.5, -0.233333, 2, 0.1, -0.5),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/alpha")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/PanelContainer:material:shader_parameter/alpha")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_subi1"]
_data = {
&"RESET": SubResource("Animation_nyyra"),
&"hide": SubResource("Animation_xrtbe"),
&"show": SubResource("Animation_skxv3")
}

[node name="InfoBoxNode" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("3_cbv6j")

[node name="InfoBox" type="PanelContainer" parent="."]
material = ExtResource("1_6j2ee")
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_pahqp")

[node name="VBoxContainer" type="VBoxContainer" parent="InfoBox"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="InfoBox/VBoxContainer"]
material = ExtResource("2_h2u68")
layout_mode = 2
theme_override_styles/panel = ExtResource("3_f5t0m")

[node name="VBoxContainer" type="VBoxContainer" parent="InfoBox/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="InfoBox/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="InfoBox/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="InfoBox/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Title Label"
label_settings = ExtResource("1_hun4q")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HideButton" type="TextureButton" parent="InfoBox/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(17, 0)
layout_mode = 2
texture_normal = ExtResource("7_hlvdv")
texture_pressed = ExtResource("8_ocjo1")
texture_disabled = ExtResource("9_4dgnn")
ignore_texture_size = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="InfoBox/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" parent="InfoBox/VBoxContainer" instance=ExtResource("7_dbawo")]
layout_mode = 2

[node name="Panel" type="Panel" parent="InfoBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = ExtResource("11_ss1hi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../InfoBox")
libraries = {
&"": SubResource("AnimationLibrary_subi1")
}

[node name="CancelAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_g1o5c")

[connection signal="pressed" from="InfoBox/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
